--- a/Packages/world.anlabo.mdnailtool/package.json
+++ b/Packages/world.anlabo.mdnailtool/package.json
@@ -1,7 +1,7 @@
 {
   "name": "world.anlabo.mdnailtool",
   "displayName": "An-Labo NailTool",
-  "version": "0.8.0-rc.1",
+  "version": "0.8.0",
   "unity": "2022.3",
   "description": "An-Labo NailTool",
   "author": {
