--- a/Packages/world.anlabo.mdnailtool/package.json
+++ b/Packages/world.anlabo.mdnailtool/package.json
@@ -1,7 +1,7 @@
 {
   "name": "world.anlabo.mdnailtool",
   "displayName": "An-Labo NailTool",
-  "version": "0.8.149",
+  "version": "0.9.0-beta.0",
   "unity": "2022.3",
   "description": "An-Labo NailTool",
   "author": {
@@ -9,7 +9,7 @@
     "email": "",
     "url": "https://van-labo.booth.pm/"
   },
-  "url": "https://github.com/An-Labo/An-Labo-NailTool/releases/download/0.8.149/world.anlabo.mdnailtool-0.8.149.zip",
+  "url": "https://github.com/An-Labo/An-Labo-NailTool/releases/download/0.9.0-beta.0/world.anlabo.mdnailtool-0.9.0-beta.0.zip",
   "repo": "https://An-Labo.github.io/An-Labo-NailTool/vpm.json",
   "vpmDependencies": {
     "com.vrchat.avatars": ">=3.5.0"
