--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,16 @@ crashlytics-build.properties
 /Assets/*
 !/Assets/.gitkeep
 !/Assets/An-Labo
+
+/Packages/*/
+!/Packages/com.vrchat.core.*/
+!/Packages/world.anlabo.mdnailtool/
+
+/Packages/world.anlabo.mdnailtool/Resource/Nail/NormalMap/
+/Packages/world.anlabo.mdnailtool/Resource/Nail/NormalMap.meta
+/Packages/world.anlabo.mdnailtool/Resource/Nail/FBX/
+/Packages/world.anlabo.mdnailtool/Resource/Nail/FBX.meta
+/Packages/world.anlabo.mdnailtool/Resource/Nail/Design/*/_design.json
+/Packages/world.anlabo.mdnailtool/Resource/Nail/Design/*/_design.json.meta
+/Packages/world.anlabo.mdnailtool/Resource/Nail/Design/*/Texture/
+/Packages/world.anlabo.mdnailtool/Resource/Nail/Design/*/Texture.meta
