--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,9 @@ crashlytics-build.properties
 !/Packages/com.vrchat.core.*/
 !/Packages/world.anlabo.mdnailtool/
 
+/Packages/world.anlabo.mdnailtool/Resource/
+/Packages/world.anlabo.mdnailtool/Resource/**
+
 /Packages/world.anlabo.mdnailtool/Resource/Nail/NormalMap/
 /Packages/world.anlabo.mdnailtool/Resource/Nail/NormalMap.meta
 /Packages/world.anlabo.mdnailtool/Resource/Nail/FBX/
