--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,10 @@ crashlytics-build.properties
 !/Packages/com.vrchat.core.*/
 !/Packages/world.anlabo.mdnailtool/
 
+
+/Packages/world.anlabo.mdnailtool/Editor/*.cs.meta
+/Packages/world.anlabo.mdnailtool/Editor/**/*.cs.meta
+
 /Packages/world.anlabo.mdnailtool/Resource/
 /Packages/world.anlabo.mdnailtool/Resource/**
 
